# notion-graph-view

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  collection_parser.py  config.py  credentials.py.tmpl  db_to_graph_parser.py  graph.py  graph_render.py  main.py  page_parser.py  parser.py  pyproject.toml  relation_logger.py  render.py  requirements.txt
libs/: graph.js  template.html
notion_graph/: __init__.py  cli.py  helper.py  parser.py
