[tool.pdm]

[tool.pdm.scripts]
start = "python -m notion_graph"

[project]
name = "notion-graph"
version = "0.2.3"
description = "Generate a roam research like network graph view from your Notion pages."
authors = [
    {name = "Steve Sun", email = "sund.chn@gmail.com"},
]
dependencies = [
    "notion-client>=2.0.0",
    "pyvis==0.3.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
